корректировка март на Март

--- a/PYDA-17_1.ipynb
+++ b/PYDA-17_1.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "day = int(input('Введите день '))\n",
     "month = input('Введите месяц ')\n",
-    "if month == 'март' and day >=21 or month == 'Апрель' and day <= 20:\n",
+    "if month == 'Март' and day >=21 or month == 'Апрель' and day <= 20:\n",
     "    print('Овен')\n",
     "elif month == 'Апрель' and day >= 21 or month == 'Май' and day <= 21:\n",
     "    print('Телец')\n",
