added fuction .lower() in third task

--- a/PYDA-17_1.ipynb
+++ b/PYDA-17_1.ipynb
@@ -49,45 +49,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите день 29\n",
-      "Введите месяц Октябрь\n",
-      "Скорпион\n"
+      "Введите день 25\n",
+      "Введите месяц Январь\n",
+      "Водолей\n"
      ]
     }
    ],
    "source": [
     "day = int(input('Введите день '))\n",
     "month = input('Введите месяц ')\n",
-    "if month == 'Март' and day >=21 or month == 'Апрель' and day <= 20:\n",
+    "month = month.lower()\n",
+    "if month == 'март' and day >=21 or month == 'апрель' and day <= 20:\n",
     "    print('Овен')\n",
-    "elif month == 'Апрель' and day >= 21 or month == 'Май' and day <= 21:\n",
+    "elif month == 'апрель' and day >= 21 or month == 'май' and day <= 21:\n",
     "    print('Телец')\n",
-    "elif month == 'Май' and day >= 22 or month == 'Июнь' and day <= 21:\n",
+    "elif month == 'май' and day >= 22 or month == 'июнь' and day <= 21:\n",
     "    print('Близнецы')\n",
-    "elif month == 'Июнь' and day >= 22 or month == 'Июль' and day <= 22:\n",
+    "elif month == 'июнь' and day >= 22 or month == 'июль' and day <= 22:\n",
     "    print('Рак')\n",
-    "elif month == 'Июль' and day >= 23 or month == 'Август' and day <= 21:\n",
+    "elif month == 'июль' and day >= 23 or month == 'август' and day <= 21:\n",
     "    print('Лев')\n",
-    "elif month == 'Август' and day >= 22 or month == 'Сентябрь' and day <= 23:\n",
+    "elif month == 'август' and day >= 22 or month == 'сентябрь' and day <= 23:\n",
     "    print('Дева')\n",
-    "elif month == 'Сентябрь' and day >= 24 or month == 'Октябрь' and day <= 23:\n",
+    "elif month == 'сентябрь' and day >= 24 or month == 'октябрь' and day <= 23:\n",
     "    print('Весы')\n",
-    "elif month == 'Октябрь' and day >= 24 or month == 'Ноябрь' and day <= 22:\n",
+    "elif month == 'октябрь' and day >= 24 or month == 'ноябрь' and day <= 22:\n",
     "    print('Скорпион')\n",
-    "elif month == 'Ноябрь' and day >= 23 or month == 'Декабрь' and day <= 22:\n",
+    "elif month == 'ноябрь' and day >= 23 or month == 'декабрь' and day <= 22:\n",
     "    print('Стрелец')\n",
-    "elif month == 'Декабрь' and day >= 23 or month == 'Январь' and day <= 20:\n",
+    "elif month == 'декабрь' and day >= 23 or month == 'январь' and day <= 20:\n",
     "    print('Козерог')\n",
-    "elif month == 'Январь' and day >= 21 or month == 'Февраль' and day <= 19:\n",
+    "elif month == 'январь' and day >= 21 or month == 'февраль' and day <= 19:\n",
     "    print('Водолей')\n",
-    "elif month == 'Февраль' and day >= 20 or month == 'Март' and day <= 20:\n",
+    "elif month == 'февраль' and day >= 20 or month == 'март' and day <= 20:\n",
     "    print('Рыбы')"
    ]
   },
