В третьей задаче надо разобраться как страны выводить название стран

--- a/PYDA-17_2.ipynb
+++ b/PYDA-17_2.ipynb
@@ -83,17 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thailand\n",
-      "[75.2, 77, 78.8, 73.4, 68, 75.2, 77]\n",
-      "Thailand\n",
-      "[75.2, 77, 78.8, 73.4, 68, 75.2, 77]\n"
+      "Средняя температура в странах:\n",
+      "273.66666666666663\n",
+      "140.11111111111111\n",
+      "132.66666666666666\n",
+      "160.88888888888886\n"
      ]
     }
    ],
@@ -104,15 +105,34 @@
     "['Russia', [35.6, 37.4, 39.2, 41, 42.8, 39.2, 35.6]],\n",
     "['Poland', [50, 50, 53.6, 57.2, 55.4, 55.4]]\n",
     "]\n",
-    "av = 0\n",
-    "a = 0\n",
-    "b = 1\n",
-    "ii = 0\n",
-    "jj = 0\n",
-    "for i in countries_temperature[int(ii)]:\n",
-    "    for j in countries_temperature[1]:\n",
-    "        print(j)\n"
+    "print('Средняя температура в странах:')\n",
+    "t = 0 # Здесь накапливается температура (уже потом переведу ее)\n",
+    "ii = 0 #номер страны из списка, по которой смотрим температуры\n",
+    "n = len (countries_temperature[ii][1]) #кол-во температур в стране ii\n",
+    "m = len (countries_temperature) # кол-во стран\n",
+    "while m > 0:\n",
+    "    for i in countries_temperature[ii][1]:\n",
+    "        t = t + float (i)\n",
+    "        n = n - 1\n",
+    "        if n == 0:\n",
+    "            ii = ii + 1\n",
+    "            t = (t - 32) / 1.8 #Пытаюсь перевести температуру\n",
+    "            print (t)\n",
+    "            t = 0\n",
+    "            if ii < 4:\n",
+    "                n = len (countries_temperature[ii][1])\n",
+    "            else:\n",
+    "                break\n",
+    "        \n",
+    "    m = m - 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
