Сделал 4 обязательных задания, по 4 очень крутой алгоритм

--- a/PYDA-17_2.ipynb
+++ b/PYDA-17_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -91,10 +91,10 @@
      "output_type": "stream",
      "text": [
       "Средняя температура в странах:\n",
-      "273.66666666666663\n",
-      "140.11111111111111\n",
-      "132.66666666666666\n",
-      "160.88888888888886\n"
+      "Thailand - 23.9 C\n",
+      "Germany - 13.8 C\n",
+      "Russia - 3.7 C\n",
+      "Poland - 12.0 C\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
     "['Poland', [50, 50, 53.6, 57.2, 55.4, 55.4]]\n",
     "]\n",
     "print('Средняя температура в странах:')\n",
-    "t = 0 # Здесь накапливается температура (уже потом переведу ее)\n",
+    "t = 0 # Здесь накапливается температура\n",
     "ii = 0 #номер страны из списка, по которой смотрим температуры\n",
     "n = len (countries_temperature[ii][1]) #кол-во температур в стране ii\n",
     "m = len (countries_temperature) # кол-во стран\n",
@@ -115,9 +115,10 @@
     "        t = t + float (i)\n",
     "        n = n - 1\n",
     "        if n == 0:\n",
+    "            print(countries_temperature[ii][0], end = ' - ')\n",
+    "            t = (t - (32 * len(countries_temperature[ii][1]))) / 1.8 / len(countries_temperature[ii][1]) #Пытаюсь перевести температуру\n",
     "            ii = ii + 1\n",
-    "            t = (t - 32) / 1.8 #Пытаюсь перевести температуру\n",
-    "            print (t)\n",
+    "            print(round(t,1),'C')\n",
     "            t = 0\n",
     "            if ii < 4:\n",
     "                n = len (countries_temperature[ii][1])\n",
