5 задание сделано, начало 6 задания

--- a/PYDA-17_2.ipynb
+++ b/PYDA-17_2.ipynb
@@ -130,10 +130,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Среднее количество просмотров на уникального пользователя: 145.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "stream = [\n",
+    "    '2018-01-01,user100,150',\n",
+    "    '2018-01-07,user99,205',\n",
+    "    '2018-03-29,user1001,81'\n",
+    "]\n",
+    "a = []\n",
+    "b = []\n",
+    "sum = 0\n",
+    "for session in stream:\n",
+    "    daily_log = session.split(',')\n",
+    "    sum = sum + int(daily_log[2])\n",
+    "    if daily_log[1] in a:\n",
+    "        continue\n",
+    "    else:\n",
+    "        a.append(daily_log[1])    \n",
+    "    user_amount = len(a)\n",
+    "avg = sum / user_amount\n",
+    "print(f\"Среднее количество просмотров на уникального пользователя: {avg:.2f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:\n",
+    "    user_input = input('Введите команду')\n",
+    "    if user_input == 'q':\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "code",
