Исправленное 2 задание из дз по упр. констр. ч.2

--- a/PYDA-17_2.ipynb
+++ b/PYDA-17_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,12 +165,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите числа:1\n",
+      "Введите числа:2\n",
+      "Введите числа:3\n",
+      "Введите числа:й\n",
+      "Введите числа:q\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
-    "    user_input = input('Введите команду')\n",
+    "    user_input = input('Введите числа:')\n",
     "    if user_input == 'q':\n",
     "        break"
    ]
