--- a/PYDA-17_3.ipynb
+++ b/PYDA-17_3.ipynb
@@ -27,15 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Поисковых запросов, содержащих 2 слов(а): 42.86\n",
-      "Поисковых запросов, содержащих 2 слов(а): 57.14\n"
+      "Поисковых запросов, содержащих 3 слов(а): 57.14\n",
+      "Поисковых запросов, содержащих 2 слов(а): 42.86\n"
      ]
     }
    ],
@@ -49,18 +49,16 @@
     "    'курс по питону',\n",
     "    'сериалы про спорт',\n",
     "]\n",
-    "sum_req = 0\n",
-    "req_2 = 0\n",
-    "req_3 = 0\n",
+    "dict_req = {}\n",
     "for request in queries:\n",
     "    request = request.split(' ')\n",
-    "    if len(request) == 2:\n",
-    "        req_2 += 1\n",
-    "    elif len(request) == 3:\n",
-    "        req_3 += 1\n",
-    "sum_req = req_2 + req_3\n",
-    "print(f\"Поисковых запросов, содержащих 2 слов(а): {req_2 * 100 / sum_req:.2f}\")\n",
-    "print(f\"Поисковых запросов, содержащих 2 слов(а): {req_3 * 100 / sum_req:.2f}\")"
+    "    if len(request) not in dict_req:\n",
+    "        dict_req.update({len(request):1})\n",
+    "    else:\n",
+    "        dict_req[len(request)] += 1    \n",
+    "sum_req = sum(dict_req.values())\n",
+    "for words, counters in dict_req.items():\n",
+    "    print(f\"Поисковых запросов, содержащих {words} слов(а): {counters * 100 / sum_req:.2f}\")"
    ]
   },
   {
@@ -120,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": []
